--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,7 @@ services:  # Список сервісів (контейнерів), які бу
       - .:/app/
       - /etc/localtime:/etc/localtime:ro
       - /:/host-root
+      - ${Path_to_go_bin}:/root/go/
     restart: unless-stopped
 
 
