--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,15 @@
+aiohttp==3.8.6
+aiosignal==1.3.1
+async-timeout==4.0.3
 attrs==23.1.0
 certifi==2023.7.22
 charset-normalizer==3.2.0
+frozenlist==1.4.0
 grafanalib==0.7.0
 idna==3.4
+multidict==6.0.4
 psutil==5.9.5
 requests==2.31.0
 toml==0.10.2
 urllib3==2.0.4
+yarl==1.9.2
